--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           </ul>
           <br />
           <div class="project-link">
-            <a href="#" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
-            <a href="#" target="_blank"><i class="fa-solid fa-link"></i></a>
+            <!-- <a href="#" target="_blank"><i class="github fa-brands fa-github-alt"></i></a> -->
+            <a href="#" target="_blank" class="demo"><i class="fa-solid fa-link"></i></a>
           </div>
         </div>
       </div>
@@ -127,8 +127,8 @@
           </ul>
           <br />
           <div class="project-link">
-            <a href="https://github.com/christianortiz-dev/PedrolosT2" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
-            <a href="https://pedrolos-t2.000.pe/" target="_blank"><i class="fa-solid fa-link"></i></a>
+            <a href="https://github.com/christianortiz-dev/PedrolosT2" target="_blank" class="github"><i class="fa-brands fa-github-alt"></i></a>
+            <a href="https://pedrolos-t2.000.pe/" target="_blank" class="demo"><i class="fa-solid fa-link"></i></a>
           </div>
         </div>
       </div>
@@ -158,8 +158,8 @@
           </ul>
           <br />
           <div class="project-link">
-            <a href="#" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
-            <a href="#" target="_blank"><i class="fa-solid fa-link"></i></a>
+            <a href="#" target="_blank" class="github"><i class="fa-brands fa-github-alt"></i></a>
+            <a href="#" target="_blank" class="demo"><i class="fa-solid fa-link"></i></a>
           </div>
         </div>
       </div>
