--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
       <!--* Project 1 -->
       
       <div class="project">
-        <a href="#" target="_blank" class="project-image-link"><img src="images/projects/weforztech.png"
+        <a href="https://weforztech.000.pe/" target="_blank" class="project-image-link"><img src="images/projects/weforztech.png"
             alt="WeforzTech" /></a>
         <div class="project-desc">
           <h4 class="project-number">Proyecto 1</h4>
           <br />
-          <a href="#" target="_blank">
+          <a href="https://weforztech.000.pe/" target="_blank">
             <h3 class="project-title">WeforzTech</h3>
           </a>
           <br />
@@ -94,7 +94,7 @@
           <br />
           <div class="project-link">
             <!-- <a href="#" target="_blank"><i class="github fa-brands fa-github-alt"></i></a> -->
-            <a href="#" target="_blank" class="demo"><i class="fa-solid fa-link"></i></a>
+            <a href="https://weforztech.000.pe/" target="_blank" class="demo"><i class="fa-solid fa-link"></i></a>
           </div>
         </div>
       </div>
