Cambiadas las imagenes .png por webp

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <!--* Project 1 -->
       
       <div class="project">
-        <a href="https://weforztech.000.pe/" target="_blank" class="project-image-link"><img src="images/projects/weforztech.png"
+        <a href="https://weforztech.000.pe/" target="_blank" class="project-image-link"><img src="images/projects/weforztech.webp"
             alt="WeforzTech" /></a>
         <div class="project-desc">
           <h4 class="project-number">Proyecto 1</h4>
@@ -101,7 +101,7 @@
 
       <!--* Project 2 -->
       <div class="project">
-        <a href="https://pedrolos-t2.000.pe/" target="_blank" class="project-image-link"><img src="images/projects/pedrolos-t2.png"
+        <a href="https://pedrolos-t2.000.pe/" target="_blank" class="project-image-link"><img src="images/projects/pedrolos-t2.webp"
             alt="Pedrolos-T2" /></a>
         <div class="project-desc">
           <h4 class="project-number">Proyecto 2</h4>
@@ -135,7 +135,7 @@
 
       <!--* Project 3 -->
       <div class="project">
-        <a href="#" target="_blank" class="project-image-link"><img src="images/projects/teslaclon.png"
+        <a href="#" target="_blank" class="project-image-link"><img src="images/projects/teslaclon.webp"
             alt="TeslaWebClon" /></a>
         <div class="project-desc">
           <h4 class="project-number">Proyecto 3</h4>
