--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           </ul>
           <br />
           <div class="project-link">
-            <a href="#" target="_blank" class="github"><i class="fa-brands fa-github-alt"></i></a>
+            <a href="https://github.com/christianortiz-dev/TeslaWebClon" target="_blank" class="github"><i class="fa-brands fa-github-alt"></i></a>
             <a href="#" target="_blank" class="demo"><i class="fa-solid fa-link"></i></a>
           </div>
         </div>
