Actualizado link de FontAwesome de v6.2.1 a v6.4.0

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <!--? ================ SKILLS ================ -->
     <hr />
     <h2 id="skills">Skills</h2>
-    <section>
+    <section class="skills">
       <p>
         (Próximamente)
       </p>
