Actualizado FontAwesome de v6.2.1 a v6.4.0

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- ==================== FONT AWESOME ==================== -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Christian Ortiz</title>
 
   <!-- ==================== FAVICON ==================== -->
@@ -63,8 +62,7 @@
     <!--? ================ PROYECTOS ================ -->
     <h2>Algunos de mis proyectos</h2>
     <section class="projects" id="projects">
-      <!--* Project 1 -->
-      
+      <!--* Project 1 -->      
       <div class="project">
         <a href="https://weforztech.000.pe/" target="_blank" class="project-image-link"><img src="images/projects/weforztech.webp"
             alt="WeforzTech" /></a>
@@ -98,6 +96,7 @@
           </div>
         </div>
       </div>
+      <!--* Project 1 -->
 
       <!--* Project 2 -->
       <div class="project">
@@ -132,6 +131,7 @@
           </div>
         </div>
       </div>
+      <!--* Project 2 -->
 
       <!--* Project 3 -->
       <div class="project">
@@ -163,6 +163,8 @@
           </div>
         </div>
       </div>
+      <!--* Project 3 -->
+
     </section>
     <!--? ================ SKILLS ================ -->
     <hr />
