--- a/index.html
+++ b/index.html
@@ -167,14 +167,26 @@
 
     </section>
     <!--? ================ SKILLS ================ -->
-    <hr />
+    <hr id="hr_section">
     <h2 id="skills">Skills</h2>
     <section class="skills">
-      <p>
-        (Próximamente)
-      </p>
+
     </section>
-    <hr />
+
+      
+    <!--? ================ GITHUB STATS ================ -->
+    <hr id="hr_section">
+    <h2 id="githubStats">GitHub Stats</h2>
+    <section class="githubStats">
+      1
+      <img id="ghStats1" src="" alt="">
+      2
+      <img id="ghStats2" src="" alt="">
+      3
+      <img id="ghStats3" src="" alt="">
+      
+    </section>
+    <hr id="hr_section">
     <!--? ================ Contact ================ -->
     <h2 id="contact-me">Contacta conmigo</h2>
     <section class="contact-me">
@@ -218,5 +230,5 @@
     </section>
   </footer>
 </body>
-
+<script src="js/app.js"></script>
 </html>
