--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <div class="menu">
         <ul class="list">
           <li><a href="#projects">Proyectos</a></li>
+          <li><a href="#githubStats">GitHub Stats</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact-me">Contacto</a></li>
         </ul>
