--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <div class="menu">
         <ul class="list">
           <li><a href="#projects">Proyectos</a></li>
-          <li><a href="#githubStats">GitHub Stats</a></li>
           <li><a href="#skills">Skills</a></li>
+          <li><a href="#githubStats">GitHub Stats</a></li>
           <li><a href="#contact-me">Contacto</a></li>
         </ul>
       </div>
@@ -221,7 +221,7 @@
     </section>
     <section class="copyright">
       <!-- Scroll Arrows up -->
-      <a href="#navbar" class="arrows-up"></a>
+      <a href="#about-me" class="arrows-up"></a>
       <p>
         Diseñado y desarrollado por
         <span class="myname"> Christian Ortiz</span>.
