--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
     <h2 id="githubStats">GitHub Stats</h2>
     <section class="githubStats">
       <!-- 1 -->
-      <img id="ghStats1" src="" alt="">
+      <img id="ghStats1" src="" alt="Christian Ortiz's GitHub Stats">
       <!-- 2 -->
-      <img id="ghStats2" src="" alt="">
+      <img id="ghStats2" src="" alt="Christian Ortiz's GitHub Contributions">
       <!-- 3 -->
-      <img id="ghStats3" src="" alt="">
+      <img id="ghStats3" src="" alt="Christian Ortiz's GitHub Most Used Languages">
       
     </section>
     <hr id="hr_section">
