--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
           </p>
           <br />
           <ul class="project-techs">
-            <li><i class="fa-brands fa-html5"></i> HTML5</li>
-            <li><i class="fa-brands fa-css3-alt"></i> CSS3</li>
-            <li><i class="fa-brands fa-php"></i> PHP</li>
-            <li><i class="fa-brands fa-square-js"></i> JavaScript</li>
-            <li><i class="fa-brands fa-bootstrap"></i> Bootstrap 4.2</li>
-            <li><i class="fa-solid fa-database"></i> MySQL</li>
+            <li><i class="project-icon">html5</i></li>
+            <li><i class="project-icon">css3</i></li>
+            <li><i class="project-icon">php</i></li>
+            <li><i class="project-icon">javascript</i></li>
+            <li><i class="project-icon">bootstrap</i></li>
+            <li><i class="project-icon">mysql</i></li>
           </ul>
           <br />
           <div class="project-link">
@@ -119,11 +119,11 @@
           </p>
           <br />
           <ul class="project-techs">
-            <li><i class="fa-brands fa-html5"></i> HTML5</li>
-            <li><i class="fa-brands fa-css3-alt"></i> CSS3</li>
-            <li><i class="fa-brands fa-php"></i> PHP</li>
-            <li><i class="fa-brands fa-square-js"></i> JavaScript</li>
-            <li><i class="fa-solid fa-database"></i> MySQL</li>
+            <li><i class="project-icon">html5</i></li>
+            <li><i class="project-icon">css3</i></li>
+            <li><i class="project-icon">php</i></li>
+            <li><i class="project-icon">javascript</i></li>
+            <li><i class="project-icon">mysql</i></li>
           </ul>
           <br />
           <div class="project-link">
@@ -153,9 +153,9 @@
           </p>
           <br />
           <ul class="project-techs">
-            <li><i class="fa-brands fa-html5"></i> HTML5</li>
-            <li><i class="fa-brands fa-css3-alt"></i> CSS3</li>
-            <li><i class="fa-brands fa-square-js"></i> JavaScript</li>
+            <li><i class="project-icon">html5</i></li>
+            <li><i class="project-icon">css3</i></li>
+            <li><i class="project-icon">javascript</i></li>
           </ul>
           <br />
           <div class="project-link">
@@ -172,8 +172,9 @@
     <h2 id="skills">Skills</h2>
     <section class="skills">
 
-    </section>
+      
 
+    </section>
       
     <!--? ================ GITHUB STATS ================ -->
     <hr id="hr_section">
