--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@
       <a href="https://telegram.me/christianortiz_dev" target="_blank">
         <img src="images/social/telegram.svg" alt="Telegram" />
       </a>
+      <!-- UiVerse -->
+      <a href="https://uiverse.io/profile/christianortiz-dev" target="_blank">
+        <img src="images/social/uiverse.png" alt="UiVerse" />
+      </a>
       
     </section>
     <section class="copyright">
