--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 </head>
 
 <body>
+  <div id="preloader">
+    <div class="custom-loader">
+    </div>
+    <p>Cargando...</p>
+  </div>
   <header>
     <!--? ================ NAVBAR ================ -->
     <nav class="navbar" id="navbar">
@@ -56,6 +61,7 @@
           <li class="hideWorkspaceContent"><a href="#skills">Skills</a></li>
           <li class="hideWorkspaceContent"><a href="#githubStats">GitHub Stats</a></li>
           <li class="hideWorkspaceContent"><a href="#contact-me">Contacto</a></li>
+          <p style="cursor:default;">_</p>
           <li id="showWorkspaceContent">Workspace</li>
         </ul>
       </div>
