--- a/index.html
+++ b/index.html
@@ -222,16 +222,35 @@
     </section>
   </main>
   <section id="workspaceContent">
-    <div>
-      <h1>Test</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at lorem nibh. Suspendisse ut tempor enim, faucibus tempor quam. Duis ultricies diam ac felis congue, sed rhoncus libero scelerisque. Maecenas ut magna quis magna scelerisque mollis. Donec eu ex orci. Nullam non ex eu odio hendrerit dictum nec non magna. Suspendisse molestie ligula mi, vitae egestas quam vestibulum sed. In et pharetra erat. Nam odio felis, gravida et arcu at, tincidunt vestibulum purus. Fusce egestas sodales dictum. Vestibulum sit amet neque dolor. Donec vitae velit rutrum, ullamcorper lectus vitae, dignissim sapien. Donec in neque metus. <br>
-        Suspendisse potenti. Sed risus orci, aliquet vitae justo nec, fermentum cursus nisl. Mauris imperdiet dignissim nisl. Maecenas consectetur nibh ac neque iaculis, a tempor metus luctus. Nunc ut nisl tincidunt, consequat enim eget, tristique massa. Duis venenatis lacus in sapien pretium, sit amet posuere leo posuere. Sed lacinia, magna et hendrerit dignissim, augue nunc pretium nulla, et interdum massa arcu sit amet metus. Proin convallis, nulla nec vestibulum tincidunt, ante odio varius tellus, a aliquam massa sapien gravida nisi. Cras in fermentum turpis. Aliquam eu lorem aliquam, condimentum ligula at, egestas leo. Mauris tempus et risus vitae mattis. Mauris est ex, elementum sed facilisis sit amet, iaculis in tortor. Morbi molestie euismod lorem sit amet cursus. <br>
-        Duis eros velit, placerat vitae orci eu, vehicula rhoncus odio. Donec convallis dapibus faucibus. Phasellus dapibus posuere quam. Duis id posuere purus. Nulla aliquet lacus lobortis felis feugiat ultricies. Nunc sagittis enim nec risus bibendum pellentesque. Nullam pellentesque dictum libero. Proin mattis orci massa, at rutrum ante pharetra in. Mauris vehicula ut lacus at vulputate. Vivamus eget quam vel sapien fermentum hendrerit. Mauris ac pharetra urna. Aenean nec ex mollis libero commodo rutrum. Etiam ut suscipit magna, nec pharetra risus. Phasellus vitae iaculis erat, quis aliquet urna. Suspendisse auctor enim est, id mattis nisl euismod sed. Curabitur cursus elementum turpis, eu porta sem dictum eget. <br>
-        Suspendisse nisl enim, faucibus nec aliquet ac, tempus a tortor. Donec commodo ultrices elit, quis fringilla nisl scelerisque eget. Vivamus ac suscipit felis. Vivamus et eros sed ipsum porta pretium et vel sapien. Sed placerat, nunc sit amet maximus viverra, ligula nulla faucibus diam, eget consequat mi enim quis magna. Cras et risus eget ipsum cursus convallis. Nam pellentesque, nunc eget aliquet ullamcorper, nunc arcu laoreet leo, a mollis lorem purus non diam. Duis lacinia molestie pretium. Curabitur convallis tempor neque ut luctus. Ut in felis ex. Nullam ex neque, molestie ac tortor at, facilisis mollis nisi. Nullam malesuada est interdum lectus consectetur aliquet. Nunc blandit urna non mi semper, eu lobortis lectus vehicula. Nunc facilisis tortor in odio dictum pharetra. Phasellus a elit libero. <br>
-        Proin vehicula porttitor lacus, et dictum libero suscipit nec. Etiam varius auctor risus id ultricies. Sed viverra mattis mi nec tristique. Nullam facilisis, diam in egestas feugiat, libero ipsum dapibus leo, cursus sagittis tellus ipsum eget mauris. Donec dictum enim sit amet ex euismod rutrum. Donec laoreet, dui ut laoreet vestibulum, odio turpis posuere enim, quis ornare massa sem vel nisi. Integer lectus leo, posuere eu mi sit amet, aliquet feugiat risus. Sed a libero urna. Aenean venenatis mi ac urna mollis, id semper ipsum hendrerit. Morbi faucibus consequat libero eu tristique. Donec sollicitudin orci sit amet elit sagittis finibus. Sed nec quam cursus est elementum scelerisque. <br>
-      </p>
-    </div>
+
+      <h1>Mi espacio de trabajo y entretenimiento</h1>
+
+
+      <div class="tableWrapper">        
+        <div id="pcTable"></div>  
+      </div>
+
+      <div class="tableWrapper">
+        <div id="lcTable"></div>        
+      </div>
+
+      <div class="tableWrapper">
+        <div id="monitorTable"></div>        
+      </div>
+
+      <div class="tableWrapper">
+        <div id="keyboardTable"></div>        
+      </div>
+
+      <div class="tableWrapper">
+        <div id="periphealsTable"></div>        
+      </div>
+
+      <div class="tableWrapper">
+        <div id="otherTable"></div>        
+      </div>
+
+
   </section>
   <footer>
     <section class="social-networks">
@@ -266,4 +285,5 @@
   </footer>
 </body>
 <script src="js/app.js"></script>
+<script src="js/myPC.js"></script>
 </html>
